--- a/inde.html
+++ b/inde.html
@@ -36,7 +36,9 @@
                         primary_clr: 'rgba(255, 220, 38, 1)',
                         text_clr: 'rgba(17, 17, 17, 1)',
                         nav_bg: 'rgba(255, 249, 244, 1)',
-                        card_bg: 'rgba(249, 223, 138, 1)'
+                        card_bg: 'rgba(249, 223, 138, 1)',
+                        secondary_bg: 'rgba(255, 249, 244, 1)',
+                        secondary_card_bg: 'rgba(255, 255, 255, 1)',
                     }
                     // ,
                     // fontFamily: {
@@ -51,7 +53,7 @@
 
 <body class="font-sora">
     <header class="">
-        <nav class="bg-nav_bg lg:mb-16 mb-4">
+        <nav class="bg-nav_bg lg:mb-16 mb-4 border-2 lg:border-0">
             <div class="lg:py-6 flex items-center justify-between lg:w-5/6 mx-auto p-3">
                 <div class="flex items-center">
                     <img src="assets/logo-header.png" alt="">
@@ -106,28 +108,332 @@
             </div>
         </section>
     </header>
-    <main class="lg:w-5/6 mx-auto p-3">
+    <main class="">
         <!-- Categorie Section -->
-        <section>
-            <h4 class="font-adlam text-4xl">
+        <section class="mb-16 lg:mb-32 lg:w-5/6 mx-auto p-3">
+            <h4 class="font-adlam text-4xl lg:mb-12 mb-8">
                 Browse By Categories
             </h4>
-            <!-- card-1 -->
-            <div class="bg-card_bg text-center">
-                <div class="w-24 rounded-full bg-white  mx-auto">
-                    <img class="p-7" src="assets/dog-cartoon.png" alt="">
+            <div class="grid lg:grid-cols-6 gap-6 grid-cols-2">
+                <!-- card-1 -->
+                <div class="bg-card_bg text-center rounded-lg p-8">
+                    <div class="w-24 h-24 rounded-full bg-white  mx-auto mb-6">
+                        <img class="p-7" src="assets/dog-cartoon.png" alt="">
+                    </div>
+                    <h5 class="text-xl font-adlam">
+                        Dog
+                    </h5>
+                    <p>
+                        3 items
+                    </p>
                 </div>
-                <h5 class="text-xl font-adlam">
-                    Dog
-                </h5>
-                <p>
-                    3 items
-                </p>
+                <!-- card-2 -->
+                <div class="bg-card_bg text-center rounded-lg p-8">
+                    <div class="w-24 h-24 rounded-full bg-white  mx-auto mb-6">
+                        <img class="p-7" src="assets/fish-cartoon.png" alt="">
+                    </div>
+                    <h5 class="text-xl font-adlam">
+                        Fish
+                    </h5>
+                    <p>
+                        3 items
+                    </p>
+                </div>
+                <!-- card-3 -->
+                <div class="bg-card_bg text-center rounded-lg p-8">
+                    <div class="w-24 h-24 rounded-full bg-white  mx-auto mb-6">
+                        <img class="p-7" src="assets/cat-cartoon.png" alt="">
+                    </div>
+                    <h5 class="text-xl font-adlam">
+                        Cat
+                    </h5>
+                    <p>
+                        3 items
+                    </p>
+                </div>
+                <!-- card-4 -->
+                <div class="bg-card_bg text-center rounded-lg p-8">
+                    <div class="w-24 h-24 rounded-full bg-white  mx-auto mb-6">
+                        <img class="p-7" src="assets/bird-cartoon.png" alt="">
+                    </div>
+                    <h5 class="text-xl font-adlam">
+                        Bird
+                    </h5>
+                    <p>
+                        3 items
+                    </p>
+                </div>
+                <!-- card-5 -->
+                <div class="bg-card_bg text-center rounded-lg p-8">
+                    <div class="w-24 h-24 rounded-full bg-white  mx-auto mb-6">
+                        <img class="p-7" src="assets/mouse-cartoon.png" alt="">
+                    </div>
+                    <h5 class="text-xl font-adlam">
+                        Small pet
+                    </h5>
+                    <p>
+                        3 items
+                    </p>
+                </div>
+                <!-- card-6 -->
+                <div class="bg-card_bg text-center rounded-lg p-8">
+                    <div class="w-24 h-24 rounded-full bg-white  mx-auto mb-6">
+                        <img class="p-7" src="assets/rabbit-cartoon.png" alt="">
+                    </div>
+                    <h5 class="text-xl font-adlam">
+                        Rabit
+                    </h5>
+                    <p>
+                        3 items
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- Trending pet -->
+        <section class="bg-secondary_bg lg:pb-32">
+            <div class=" mb-16 lg:w-5/6 mx-auto p-3">
+                <h3 class="font-adlam text-4xl lg:mb-12 mb-8 mt-8">
+                    Trending Pet Products
+                </h3>
+                <div class="flex lg:flex-row flex-col">
+                    <!-- Main Card -->
+                    <div class="lg:w-1/3  pt-10 bg-card_bg rounded-xl p-8 required:">
+                        <div class="space-y-8">
+                            <h4 class="text-3xl font-adlam">
+                                T- Shird For Dogs
+                            </h4>
+                            <p class="text-text_clr">
+                                Discover a world of treats, toys, and essentials handpicked for
+                            </p>
+
+                        </div>
+                        <div class="flex justify-between mt-6">
+                            <button class="btn bg-white btn-outline border-white">Shop Now</button>
+                            <div class="flex justify-end">
+                                <img src="assets/cute-pet-mid.png" alt="Dog in T-Shirt" class="w-40 h-auto m-0 p-0">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 lg:grid-cols-3 lg:w-2/3 lg:gap-6 gap-3 lg:ps-6 lg:pt-0 pt-6">
+                        <!-- Card-1 -->
+                        <div class="flex bg-white p-2 lg:p-4 rounded-lg items-center">
+                            <div
+                                class="lg:w-[86px] lg:h-[86px] w-[53px] h-[53px] bg-secondary_bg flex items-center rounded-lg">
+                                <img class="mx-auto " src="assets/dog-cartoon.png" alt="">
+                            </div>
+                            <div class="ps-4">
+                                <span class="flex items-center gap-2 text-xs lg:text-base"><i
+                                        class="fa-solid fa-star lg:text-xl text-[gold]"></i>4.5</span>
+                                <h5 class="font-adlam text-sm lg:text-xl ">
+                                    Pet Bed
+                                </h5>
+                                <p class="text-xs lg:text-base">
+                                    $39.99
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Card-2 -->
+                        <div class="flex bg-white p-2 lg:p-4 rounded-lg items-center">
+                            <div
+                                class="lg:w-[86px] lg:h-[86px] w-[53px] h-[53px] bg-secondary_bg flex items-center rounded-lg">
+                                <img class="mx-auto " src="assets/fish-cartoon.png" alt="">
+                            </div>
+                            <div class="ps-4">
+                                <span class="flex items-center gap-2 text-xs lg:text-base"><i
+                                        class="fa-solid fa-star lg:text-xl text-[gold]"></i>4.5</span>
+                                <h5 class="font-adlam text-sm lg:text-xl ">
+                                    Pet Bed
+                                </h5>
+                                <p class="text-xs lg:text-base">
+                                    $39.99
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Card-3 -->
+                        <div class="flex bg-white p-2 lg:p-4 rounded-lg items-center">
+                            <div
+                                class="lg:w-[86px] lg:h-[86px] w-[53px] h-[53px] bg-secondary_bg flex items-center rounded-lg">
+                                <img class="mx-auto " src="assets/bird-cartoon.png" alt="">
+                            </div>
+                            <div class="ps-4">
+                                <span class="flex items-center gap-2 text-xs lg:text-base"><i
+                                        class="fa-solid fa-star lg:text-xl text-[gold]"></i>4.5</span>
+                                <h5 class="font-adlam text-sm lg:text-xl ">
+                                    Pet Bed
+                                </h5>
+                                <p class="text-xs lg:text-base">
+                                    $39.99
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Card-4 -->
+                        <div class="flex bg-white p-2 lg:p-4 rounded-lg items-center">
+                            <div
+                                class="lg:w-[86px] lg:h-[86px] w-[53px] h-[53px] bg-secondary_bg flex items-center rounded-lg">
+                                <img class="mx-auto " src="assets/rabbit-cartoon.png" alt="">
+                            </div>
+                            <div class="ps-4">
+                                <span class="flex items-center gap-2 text-xs lg:text-base"><i
+                                        class="fa-solid fa-star lg:text-xl text-[gold]"></i>4.5</span>
+                                <h5 class="font-adlam text-sm lg:text-xl ">
+                                    Pet Bed
+                                </h5>
+                                <p class="text-xs lg:text-base">
+                                    $39.99
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Card-5 -->
+                        <div class="flex bg-white p-2 lg:p-4 rounded-lg items-center">
+                            <div
+                                class="lg:w-[86px] lg:h-[86px] w-[53px] h-[53px] bg-secondary_bg flex items-center rounded-lg">
+                                <img class="mx-auto " src="assets/bird-cartoon.png" alt="">
+                            </div>
+                            <div class="ps-4">
+                                <span class="flex items-center gap-2 text-xs lg:text-base"><i
+                                        class="fa-solid fa-star lg:text-xl text-[gold]"></i>4.5</span>
+                                <h5 class="font-adlam text-sm lg:text-xl ">
+                                    Pet Bed
+                                </h5>
+                                <p class="text-xs lg:text-base">
+                                    $39.99
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Card-6 -->
+                        <div class="flex bg-white p-2 lg:p-4 rounded-lg items-center">
+                            <div
+                                class="lg:w-[86px] lg:h-[86px] w-[53px] h-[53px] bg-secondary_bg flex items-center rounded-lg">
+                                <img class="mx-auto " src="assets/pet-couch.png" alt="">
+                            </div>
+                            <div class="ps-4">
+                                <span class="flex items-center gap-2 text-xs lg:text-base"><i
+                                        class="fa-solid fa-star lg:text-xl text-[gold]"></i>4.5</span>
+                                <h5 class="font-adlam text-sm lg:text-xl ">
+                                    Pet Bed
+                                </h5>
+                                <p class="text-xs lg:text-base">
+                                    $39.99
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Card-7 -->
+                        <div class="flex bg-white p-2 lg:p-4 rounded-lg items-center">
+                            <div
+                                class="lg:w-[86px] lg:h-[86px] w-[53px] h-[53px] bg-secondary_bg flex items-center rounded-lg">
+                                <img class="mx-auto " src="assets/fish-cartoon.png" alt="">
+                            </div>
+                            <div class="ps-4">
+                                <span class="flex items-center gap-2 text-xs lg:text-base"><i
+                                        class="fa-solid fa-star lg:text-xl text-[gold]"></i>4.5</span>
+                                <h5 class="font-adlam text-sm lg:text-xl ">
+                                    Pet Bed
+                                </h5>
+                                <p class="text-xs lg:text-base">
+                                    $39.99
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Card-8 -->
+                        <div class="flex bg-white p-2 lg:p-4 rounded-lg items-center">
+                            <div
+                                class="lg:w-[86px] lg:h-[86px] w-[53px] h-[53px] bg-secondary_bg flex items-center rounded-lg">
+                                <img class="mx-auto " src="assets/pet-couch.png" alt="">
+                            </div>
+                            <div class="ps-4">
+                                <span class="flex items-center gap-2 text-xs lg:text-base"><i
+                                        class="fa-solid fa-star lg:text-xl text-[gold]"></i>4.5</span>
+                                <h5 class="font-adlam text-sm lg:text-xl ">
+                                    Pet Bed
+                                </h5>
+                                <p class="text-xs lg:text-base">
+                                    $39.99
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Card-9 -->
+                        <div class="lg:flex bg-white p-2 lg:p-4 rounded-lg lg:visible hidden items-center">
+                            <div
+                                class="lg:w-[86px] lg:h-[86px] w-[53px] h-[53px] bg-secondary_bg flex items-center rounded-lg">
+                                <img class="mx-auto " src="assets/rabbit-cartoon.png " alt="">
+                            </div>
+                            <div class="ps-4">
+                                <span class="flex items-center gap-2 text-xs lg:text-base"><i
+                                        class="fa-solid fa-star lg:text-xl text-[gold]"></i>4.5</span>
+                                <h5 class="font-adlam text-sm lg:text-xl ">
+                                    Pet Bed
+                                </h5>
+                                <p class="text-xs lg:text-base">
+                                    $39.99
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Low prices Section -->
+        <section class="mb-16 lg:mb-32 lg:w-5/6 mx-auto p-3 lg:mt-28">
+            <h4 class="font-adlam text-4xl lg:mb-12 mb-8">
+                Everyday low Price
+            </h4>
+            <div class="lg:flex">
+                <div
+                    class="lg:flex bg-gradient-to-r from-[rgb(248,204,251)] to-[rgb(172,210,253)] lg:ps-16 rounded-xl items-center lg:h-[480px]">
+                    <div class="ps-8 pt-8 lg:p-0">
+                        <span class="text-xl hidden lg:flex lg:mb-4">Under Price</span>
+                        <h3 class="font-adlam lg:text-[28px] text-xl">
+                            Pet Grooming Mitt
+                        </h3>
+                        <span class="font-adlam lg:text-xl text-xl text-white lg:flex hidden lg:mb-4">
+                            (Easy Hair Removal)
+                        </span>
+                        <h1 class="font-adlam text-[50px] lg:text-black text-white">
+                            $7.99
+                        </h1>
+                    </div>
+                    <div class="flex justify-end lg:w-[380px] w-[200px]">
+                        <img class="" src="assets/cute-dog-mid.png" alt="">
+                    </div>
+                </div>
+                <div class="mt-6 lg:mt-0 lg:ms-6">
+                    <div
+                        class="lg:flex bg-gradient-to-r from-[rgb(255,249,244)] to-[rgb(249,223,138)] lg:ps-12 p-8 rounded-xl lg:h-[480px]">
+                        <div>
+                            <h3 class="font-adlam lg:text-[30px] text-xl">
+                                T-Shirt for Dogs
+                            </h3>
+                            <h1 class="font-adlam text-[50px] text-primary_clr">
+                                $7.99
+                            </h1>
+                        </div>
+                        <div class="flex justify-end">
+                            <img src="assets/cute-pet-mid.png" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
     <footer>
-
+        <!-- Footer Card Section -->
+        <section class="mb-16 lg:mb-32 lg:w-5/6 mx-auto p-3 bg-secondary_bg rounded-xl">
+            <div class="lg:flex items-center lg:gap-20">
+                <img src="assets/cute-pet-mid.png" alt="">
+                <div class="">
+                    <h4 class="lg:text-[32px] text-[22px] font-adlam text-center mb-3 lg:mb-5">
+                        Get Pawsome News!
+                    </h4>
+                    <h5 class="lg:text-xl text-base text-center mb-5 lg:mb-9">
+                        Exclusive training tips, ticks, product deals and more.
+                    </h5>
+                    <input type="text" class="lg:p-4 p-2 text-[14px] lg:text-base border-none w-full mb-3 lg:mb-9"
+                        placeholder="Enter email...." name="" id="">
+                    <button class="btn btn-warning">Subscribe</button>
+                </div>
+            </div>
+            <!-- Main Div -->
+        </section>
     </footer>
 </body>
 
