change style something

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             </h4>
             <div class="lg:flex">
                 <div
-                    class="lg:flex bg-gradient-to-r from-[rgb(248,204,251)] to-[rgb(172,210,253)] lg:ps-16 rounded-xl items-center lg:h-[480px]">
+                    class="lg:w-7/12 lg:flex bg-gradient-to-r from-[rgb(248,204,251)] to-[rgb(172,210,253)] lg:ps-16 rounded-xl items-center ">
                     <div class="ps-8 pt-8 lg:p-0">
                         <span class="text-xl hidden lg:flex lg:mb-4">Under Price</span>
                         <h3 class="font-adlam lg:text-[28px] text-xl">
@@ -397,7 +397,7 @@
                         <img class="" src="assets/cute-dog-mid.png" alt="">
                     </div>
                 </div>
-                <div class="mt-6 lg:mt-0 lg:ms-6">
+                <div class="mt-6 lg:mt-0 lg:ms-6 lg:w-5/12">
                     <div
                         class="lg:flex bg-gradient-to-r from-[rgb(255,249,244)] to-[rgb(249,223,138)] lg:ps-12 p-8 rounded-xl lg:h-[480px]">
                         <div>
