--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
                             $7.99
                         </h1>
                     </div>
-                    <div class="flex justify-end lg:w-[380px] w-[200px]">
-                        <img class="" src="assets/cute-dog-mid.png" alt="">
+                    <div class="lg:w-[380px] w-[200px]">
+                        <img class="ml-36 lg:ml-0" src="assets/cute-dog-mid.png" alt="">
                     </div>
                 </div>
                 <div class="mt-6 lg:mt-0 lg:ms-6 lg:w-5/12">
@@ -418,12 +418,12 @@
     </main>
     <footer class="lg:p-0 relative lg:mt-[400px] mt-80">
         <!-- Footer Card Section -->
-        <section class="mb-16 lg:mb-32 lg:w-5/6 mx-auto p-3 absolute -top-52 lg:ms-32">
-            <div class="bg-secondary_bg rounded-xl">
+        <section class="mb-16 lg:mb-32 lg:w-5/6 mx-auto p-3 absolute lg:-top-52 -top-64 lg:ms-32">
+            <div class="bg-secondary_bg rounded-xl p-2">
                 <div class="lg:flex items-center lg:gap-20">
                     <img class="lg:ms-20 lg:my-9" src="assets/cute-pet-mid.png" alt="">
-                    <div class="">
-                        <h4 class="lg:text-[32px] text-[22px] font-adlam text-center mb-3 lg:mb-5">
+                    <div class=" text-center lg:text-left">
+                        <h4 class="lg:text-[32px] text-[22px] font-adlam  mb-3 lg:mb-5">
                             Get Pawsome News!
                         </h4>
                         <h5 class="lg:text-xl text-base text-center mb-5 lg:mb-9">
