added low price style

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h4 class="font-adlam text-4xl lg:mb-12 mb-8">
                 Browse By Categories
             </h4>
-            <div class="grid lg:grid-cols-6 gap-6 grid-cols-2">
+            <div class="grid lg:grid-cols-6 gap-3 lg:gap-6 grid-cols-2">
                 <!-- card-1 -->
                 <div class="bg-card_bg text-center rounded-lg p-8">
                     <div class="w-24 h-24 rounded-full bg-white  mx-auto mb-6">
@@ -393,8 +393,8 @@
                             $7.99
                         </h1>
                     </div>
-                    <div class="lg:w-[380px] w-[200px]">
-                        <img class="ml-36 lg:ml-0" src="assets/cute-dog-mid.png" alt="">
+                    <div class="lg:w-[380px] flex justify-end">
+                        <img class="w-[200px]" src="assets/cute-dog-mid.png" alt="">
                     </div>
                 </div>
                 <div class="mt-6 lg:mt-0 lg:ms-6 lg:w-5/12">
@@ -418,7 +418,7 @@
     </main>
     <footer class="lg:p-0 relative lg:mt-[400px] mt-80">
         <!-- Footer Card Section -->
-        <section class="mb-16 lg:mb-32 lg:w-5/6 mx-auto p-3 absolute lg:-top-52 -top-64 lg:ms-32">
+        <section class="lg:w-5/6 mx-auto p-3 absolute lg:-top-52 -top-64 lg:ms-32">
             <div class="bg-secondary_bg rounded-xl p-2">
                 <div class="lg:flex items-center lg:gap-20">
                     <img class="lg:ms-20 lg:my-9" src="assets/cute-pet-mid.png" alt="">
@@ -429,7 +429,7 @@
                         <h5 class="lg:text-xl text-base text-center mb-5 lg:mb-9">
                             Exclusive training tips, ticks, product deals and more.
                         </h5>
-                        <input type="text" class="lg:p-4 p-2 text-[14px] lg:text-base border-none w-full mb-3 lg:mb-9"
+                        <input type="text" class="lg:p-4 p-2 text-[14px] lg:text-base border-none w-full mb-3 lg:mb-9 rounded-md"
                             placeholder="Enter email...." name="" id="">
                         <button class="btn btn-warning">Subscribe</button>
                     </div>
