some style change

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                             </h1>
                         </div>
                         <div class="flex justify-end">
-                            <img src="assets/cute-pet-mid.png" alt="">
+                            <img class="w-[250px] lg:w-full h-auto" src="assets/cute-pet-mid.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -450,7 +450,7 @@
                             </h1>
                         </div>
                         <div class="flex justify-end">
-                            <img src="assets/my-asset/white-dog.png" alt="">
+                            <img class="w-[250px] lg:w-full" src="assets/my-asset/white-dog.png" alt="">
                         </div>
                     </div>
                 </div>
