--- a/index.html
+++ b/index.html
@@ -379,7 +379,8 @@
                 Everyday low Price
             </h4>
             <div class="lg:flex">
-                <div class="lg:w-7/12 lg:flex bg-gradient-to-r from-[rgb(248,204,251)] to-[rgb(172,210,253)] lg:ps-16 rounded-xl items-center ">
+                <div
+                    class="lg:w-7/12 lg:flex bg-gradient-to-r from-[rgb(248,204,251)] to-[rgb(172,210,253)] lg:ps-16 rounded-xl items-center ">
                     <div class="ps-8 pt-8 lg:p-0">
                         <span class="text-xl hidden lg:flex lg:mb-4">Under Price</span>
                         <h3 class="font-adlam lg:text-[28px] text-xl">
